[package]
name = "quorum"
version = "0.1.0"
edition = "2021"
description = """
Simple cli for multi-party key generation and encryption
"""
repository = "github.com/ragona/quorum"
keywords = ["encryption", "shamir", "cryptography"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
clap = {version = "4.0.24", features=["derive"]}
pem = "1.1.0"
ring = "0.16.20"
sharks = "0.4"

[dev-dependencies]
assert_cmd = "2.0.6"
assert_fs = "1.0.9"
predicates = "2.1.3"
