[package]
name = "quorum"
version = "0.3.0"
edition = "2021"
description = """
Simple cli for multi-party key generation and encryption
"""
repository = "github.com/ragona/quorum"
keywords = ["encryption", "shamir", "cryptography"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.66"
base64 = "0.20.0"
clap = {version = "4.0.24", features=["derive"] }
ecies = { version = "0.2.3", default-features=false, features = ["pure"] }
libsecp256k1 = "0.7.1"
pem = "1.1.0"
rand = {version = "0.8.5", features=["getrandom"] }
sharks = { version = "0.5.0", features = ["zeroize_memory"] }
zeroize = { version = "1.5.7", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.6"
assert_fs = "1.0.9"
predicates = "2.1.3"
rand_chacha = "0.3.1"
